--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">105,159</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">21,385</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">pack.TestRunner</td><td><a href="#m0">feature</a></td><td rowspan="5">1521397315533</td><td rowspan="5">24931</td></tr><tr class="passedeven"><td><a href="#m1">feature</a></td></tr><tr class="passedeven"><td><a href="#m2">feature</a></td></tr><tr class="passedeven"><td><a href="#m3">feature</a></td></tr><tr class="passedeven"><td><a href="#m4">feature</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">pack.TestRunner</td><td><a href="#m0">feature</a></td><td rowspan="1">1522180002801</td><td rowspan="1">20850</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">pack.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Login func</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">pack.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Login func</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">pack.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Login func</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">pack.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Login func</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">pack.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Login func</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
