--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>18/07/12 18:42:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:pack.TestRunner@7e0b0338]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1232306490</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>18/07/12 18:42:18</td>   <td>324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:pack.TestRunner@7e0b0338]">feature</td> 
-  <td>main@1232306490</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>18/07/12 18:42:38</td>   <td>20839</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:pack.TestRunner@7e0b0338]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1232306490</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/12 21:03:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:pack.NewTest@5f341870]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/12 21:03:43</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:pack.NewTest@5f341870]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/12 21:03:43</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.first()[pri:0, instance:pack.NewTest@5f341870]">first</td> 
+  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/12 21:03:43</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.second()[pri:1, instance:pack.NewTest@5f341870]">second</td> 
+  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/12 21:03:43</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:pack.NewTest@5f341870]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/12 21:03:43</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="go.goOne()[pri:2, instance:pack.go@553f17c]">goOne</td> 
+  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/12 21:03:43</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="go.goTwo()[pri:3, instance:pack.go@553f17c]">goTwo</td> 
+  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/12 21:03:43</td>   <td>53</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:pack.NewTest@5f341870]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1386767190</td>   <td></td> </tr>
 </table>
